<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_map_chat"
            android:icon="@drawable/ic_menu_map"
            android:title="@string/nav_map_chat"/>
        <item
            android:id="@+id/nav_my_chat"
            android:icon="@drawable/ic_menu_group"
            android:title="@string/nav_my_chat"/>
        <item
            android:id="@+id/nav_near_me"
            android:icon="@drawable/ic_menu_near_me"
            android:title="@string/nav_near_me"/>
        <item
            android:id="@+id/nav_recommend"
            android:icon="@drawable/ic_menu_thumb_up"
            android:title="@string/nav_recommend"/>
        <item
            android:id="@+id/nav_private_chat"
            android:icon="@drawable/ic_menu_chat"
            android:title="@string/nav_private_chat"/>
    </group>

    <item android:title="@string/nav_settings">
        <menu>
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_menu_settings"
                android:title="@string/nav_settings"/>
        </menu>
    </item>

</menu>
